<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:title="@string/menu_filter"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

</menu>
